--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
+
 body {
     background-color: #bef369;
+    font-family: Courgette;
+    color: white
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 700px;
+    margin: 0;
 }
