--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@
 body {
     background-color: #bef369;
     font-family: Courgette;
-    color: white
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 700px;
-    margin: 0;
+    color: black
+}
+.passo {
+    display: none;
+}
+.passo.ativo{
+    display:block;
 }
